<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_home_function_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_01" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_word"
                android:textColor="?attr/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_dance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_02" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_dance"
                android:textColor="?attr/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_song"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_03" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_song"
                android:textColor="?attr/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_art"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_04" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_art"
                android:textColor="?attr/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_medicine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_05" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_medicine"
                android:textColor="?attr/colorText" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/main_home_function_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_06" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_music"
                android:textColor="?attr/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_drama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_07" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_drama"
                android:textColor="?attr/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_acrobatics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_08" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_acrobatics"
                android:textColor="?attr/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_skill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_09" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_skill"
                android:textColor="?attr/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_home_function_folklore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="56dp"
                    android:layout_height="70dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_10" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:text="@string/main_home_folklore"
                android:textColor="?attr/colorText" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>